# hydro_trader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.sh  start_game.py
data/: Bastihøyden-Vest_snow_data.csv  Bastihøyden-Øst_snow_data.csv  Kølasnuten_snow_data.csv  Tobikammen-Nord_snow_data.csv  Tobikammen-Sør_snow_data.csv  nyfjord_rain_data.csv  power_demand.csv  tesselvannet_rain_data.csv  vestarne_rain_data.csv  østarne_rain_data.csv
data_train/: Bastihøyden-Vest_snow_data.csv  power_demand.csv  vestarne_rain_data.csv
hydro_trader/: client.py  game.py  reservoirs.py  server.py  simulation.py
templates/: admin.jinja  scoreboard.jinja
