[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro_trader"
version = "0.1.0"
description = "A trading system for hydro resources"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    # Add other dependencies your project needs
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hydro_trader"
"Bug Tracker" = "https://github.com/yourusername/hydro_trader/issues"

[tool.setuptools]
packages = ["hydro_trader"]